added hello message

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,5 +8,8 @@ $spacing-default: 1rem;
 $spacing-large: 2 * $spacing-default;
 $spacing-small: 2 / $spacing-default;
 
+// border radius
+$default-border-radius: 10px;
+
 // full width
 $full-width: 100%;
