--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,7 +2,6 @@
 
 $font-family: 'Open Sans', sans-serif;
 
-
 // spacing
 $spacing-default: 1rem;
 $spacing-large: 2 * $spacing-default;
@@ -13,3 +12,5 @@ $default-border-radius: 10px;
 
 // full width
 $full-width: 100%;
+
+$transition: 0.5s;
