added baserRow and baseSection.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,9 +8,9 @@ $spacing-large: 2 * $spacing-default;
 $spacing-small: 2 / $spacing-default;
 
 // border radius
-$default-border-radius: 10px;
+$default-border-radius: 6px;
 
 // full width
 $full-width: 100%;
-
 $transition: 0.5s;
+$box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.05);
