--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,3 +14,9 @@ $default-border-radius: 6px;
 $full-width: 100%;
 $transition: 0.5s;
 $box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.05);
+
+$breakpoint-xl: 1800px;
+$breakpoint-l: 1200px;
+$breakpoint-m: 750px;
+$breakpoint-s: 450px;
+$breakpoint-xs: 300px;
